--- a/_includes/catalogue_item.html
+++ b/_includes/catalogue_item.html
@@ -8,10 +8,8 @@
     <div class="catalogue-line"></div>
 
     <p>
-      {% if post.excerpt_separator %}
-        {{ post.excerpt | strip_html }}
-      {% else %}
-        {{ post.content | strip_html | truncatewords: 30 }}
+      {% if page.subtitle %}
+        {{ page.subtitle }}
       {% endif %}
     </p>
 
