--- a/_includes/catalogue_item.html
+++ b/_includes/catalogue_item.html
@@ -8,8 +8,14 @@
     <div class="catalogue-line"></div>
 
     <p>
-      {% if page.subtitle %}
-        {{ page.subtitle }}
+      {% if post.subtitle %}
+        {{ post.subtitle }}
+      {% else %}
+        {% if post.excerpt_separator %}
+          {{ post.excerpt | strip_html }}
+        {% else %}
+          {{ post.content | strip_html | truncatewords: 10 }}
+        {% endif %}
       {% endif %}
     </p>
 
